--- a/styleguide/source/assets/scss/03-organisms/_header.scss
+++ b/styleguide/source/assets/scss/03-organisms/_header.scss
@@ -39,6 +39,7 @@
       font-size: 80%;
       transition: all .25s ease-in;
       margin-bottom: 0;
+      margin-top: 0;
     }
   }
   
